# dcap2nfs

./: README  bootstrap.sh  configure.ac
src/: Makefile.am  compound.c  compound.h  ds_cache.c  list.h  main.c  nfs41_client.h  nfs41_ops.c  nfs4_prot.h  nfs4_prot_clnt.c  nfs4_prot_svc.c  nfs4_prot_xdr.c  nfsv41_ops.h  rpc_client.c  utf8_utils.c  utf8_utils.h
